# NoNameKernel

./: .bochsrc  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  ROADMAP.md  ReadMe.md  build.rs  build.sh  link.ld  linker.ld  start.sh  target.json
.cargo/: config.toml  linker.ld  target.json
iso_root/: nonamekernel
nmk_archs/: Cargo.toml  build.rs
nmk_archs/src/: lib.rs  tests.rs
nmk_archs/src/x86_64/: mod.rs  register.rs  stacktrace.rs
nmk_archs/src/x86_64/gdt/: mod.rs
nmk_archs/src/x86_64/idt/: exceptions.rs  irq.rs  mod.rs  pit.rs
nmk_archs/src/x86_64/memory/: _pmm.rs  mod.rs  nmk_pmm.rs  paging.rs  pmm.rs
nmk_drivers/: Cargo.toml
nmk_drivers/src/: lib.rs
nmk_drivers/src/keyboard/: mod.rs
nmk_drivers/src/pci/: mod.rs
nmk_drivers/src/serial/: mod.rs
nmk_drivers/src/vga/: buffer.rs  mod.rs  new_vga.rs  render.rs  vga_color.rs
nmk_status/: Cargo.toml
nmk_status/src/: lib.rs
nmk_utils/: Cargo.toml
nmk_utils/src/: asm.rs
nonamekernel/: Cargo.toml  build.rs
nonamekernel/src/: kernel.rs  main.rs  panic_handler.rs
scripts/: build.sh  build_release.sh  make_bootimage_disk.sh  make_grub_disk.sh  make_limine_disk.sh  make_limine_disk_release.sh
src/: kernel.rs  main.rs  print.rs
src/arch/x86_64/: gdt.rs  set_gdt.asm
src/arch/x86_64/gdt/: gdt.S  gdt.asm  gdt.rs  gdt.s  mod.rs
src/arch/x86_64/idt/: exceptions.rs  idt.rs  idt.s  irq.rs  mod.rs  pit.rs
src/arch/x86_64/idt/interrupts/: interrupt.asm  mod.rs
src/bootloader/: grub.rs  mod.rs  stivale.rs  stivale2.rs  stivale2_header.rs
src/drivers/: mod.rs
src/drivers/keyboard/: mod.rs
src/drivers/serial/: mod.rs
src/drivers/vga/: buffer.rs  render.rs
src/lib/: mod.rs  vga.rs
src/utils/: asm.rs  mod.rs  panic.rs  panic_handler.rs  print.rs  status.rs
submodules/: limine.cfg
