[package]
name = "nonamekernel"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"

[build-dependencies]
cc = "1.0.67"
nasm-rs = "0.2.0"
[dependencies]
bootloader = "0.9.8"
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }