[package]
name = "nmk_archs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
nasm-rs = "0.2.4"


[dependencies]
bitflags = "1.3.2"
bit_field = "0.10.1"
nmk_utils = { path = "../nmk_utils" }
nmk_drivers = { path = "../nmk_drivers" }
