[package]
name = "nonamekernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
nasm-rs = "0.2.0"

[dependencies]
stivale-boot = "0.3.1"
nmk_archs = { path = "../nmk_archs" }
nmk_drivers = { path = "../nmk_drivers" }
nmk_status = { path = "../nmk_status" }
rustc-demangle = "0.1"
